[metadata]
name = example-pkg-YOUR-USERNAME-HERE
version = 0.0.1
author = Michael Moser
author_email = moser.michael@gmail.com
description =  similar to pprint, but shows all object field values
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MoserMichael/pprintex
project_urls =
    Bug Tracker = https://github.com/MoserMichael/pprintex/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Libraries
    Topic :: System :: Logging
    Topic :: Utilities
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
